--- a/Rating Prediction and Topic modeling on Refrigerator water filter Amazon Reviews - Part 2.ipynb
+++ b/Rating Prediction and Topic modeling on Refrigerator water filter Amazon Reviews - Part 2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Rating Prediction and Topic modelling on Refrigerator water filter Amazon Reviews - Part 2***"
+    "***Rating Prediction and Topic modeling on Refrigerator water filter Amazon Reviews - Part 2***"
    ]
   },
   {
@@ -200,7 +200,7 @@
     }
    },
    "source": [
-    "# MODELLING"
+    "# MODELING"
    ]
   },
   {
@@ -212,7 +212,7 @@
     }
    },
    "source": [
-    "## TOPIC MODELLING"
+    "## TOPIC MODELING"
    ]
   },
   {
@@ -1299,7 +1299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TOPIC MODELLING\n",
+    "### TOPIC MODELING\n",
     "***- Frequency wise Topic 0 contribute most out of the 5 topics***\n",
     "\n",
     "- Advantage: \n",
